権限をテーブルで追加するように修正